# netbox-rir-manager

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile-plugin_dev  devcontainer.json  docker-compose.yml  requirements-dev.txt
.devcontainer/configuration/: configuration.py  plugins.py
.devcontainer/home/: .gitignore
.github/: release-drafter.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-drafter.yml
docs/: index.md  zensical.toml
docs/development/: contributing.md  dev-container.md  manual-setup.md
docs/getting-started/: configuration.md  first-sync.md  installation.md
docs/plans/: 2026-02-04-netbox-rir-manager.md  2026-02-05-core-reliability.md  2026-02-05-sync-autolink-redesign.md  2026-02-05-write-operations.md
docs/reference/: rest-api.md
docs/user-guide/: rir-configs.md  syncing.md  user-api-keys.md  write-operations.md
netbox_rir_manager/: __init__.py  choices.py  constants.py  fields.py  filtersets.py  forms.py  jobs.py  navigation.py  search.py  signals.py  tables.py  template_content.py  urls.py  views.py
netbox_rir_manager/api/: serializers.py  urls.py  views.py
netbox_rir_manager/backends/: __init__.py  arin.py  base.py
netbox_rir_manager/migrations/: 0001_initial.py  0002_rename_riraccount_to_rirconfig.py  0003_add_riruserkey_and_contact_link.py  0004_alter_riruserkey_api_key.py  0005_rircontact_synced_by_rirnetwork_synced_by_and_more.py  0006_rirticket.py  0007_alter_rirconfig_api_url.py  0008_update_rirconfig_objecttype_features.py  0009_add_rirnetwork_net_type.py  0010_add_rircontact_address_fields.py  0011_rirsiteaddress_rirorganization_tenant_rirnetwork_auto_reassign.py  0012_rircontact_last_name_allow_blank.py  0013_rircustomer.py  0014_riraddress_refactor.py  0015_unique_address_constraint.py  0016_add_location_to_address.py  0017_site_fk_location_onetoone.py
netbox_rir_manager/models/: __init__.py  accounts.py  addresses.py  credentials.py  customers.py  resources.py  sync.py  tickets.py
netbox_rir_manager/services/: geocoding.py
netbox_rir_manager/templates/netbox_rir_manager/: prefix_reassign.html  riraccount.html  riraddress.html  rirconfig.html  rirconfig_bulk_sync.html  rircontact.html  rircustomer.html  rirnetwork.html  rirnetwork_confirm_delete_arin.html  rirnetwork_confirm_remove.html  rirnetwork_reallocate.html  rirnetwork_reassign.html  rirorganization.html  rirsiteaddress.html  rirsynclog.html  rirticket.html  riruserkey.html
netbox_rir_manager/templates/netbox_rir_manager/buttons/: bulk_sync.html
netbox_rir_manager/templates/netbox_rir_manager/htmx/: site_address_resolve_modal.html
netbox_rir_manager/templates/netbox_rir_manager/inc/: rir_aggregate_buttons.html  rir_network_panel.html  rir_prefix_buttons.html  rir_site_address_panel.html
tests/: conftest.py  test_api.py  test_fields.py  test_filtersets.py  test_jobs.py  test_models.py  test_signals.py  test_views.py
tests/test_backends/: test_arin.py  test_base.py  test_retry.py
