[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["netbox_rir_manager", "netbox_rir_manager.*"]

[tool.setuptools.package-data]
netbox_rir_manager = ["templates/**/*"]

[project]
name = "netbox-rir-manager"
version = "0.1.0"
description = "NetBox plugin for managing RIR (ARIN, RIPE, etc.) resources"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jonathan Senecal", email = "jonathan@jonathansenecal.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
    "pyregrws>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/jsenecal/netbox-rir-manager"
Source = "https://github.com/jsenecal/netbox-rir-manager"
Tracker = "https://github.com/jsenecal/netbox-rir-manager/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "UP", "B", "SIM"]
ignore = ["E203", "E266"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=netbox_rir_manager --cov-report=term-missing --reuse-db"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: bump version {old_version} -> {new_version}"
tag_pattern = "v{version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"netbox_rir_manager/__init__.py" = [
    '__version__ = "{version}"',
]
