[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["netbox_rir_manager", "netbox_rir_manager.*"]

[tool.setuptools.package-data]
netbox_rir_manager = ["templates/**/*"]

[project]
name = "netbox-rir-manager"
version = "0.3.2"
description = "NetBox plugin for managing RIR (ARIN, RIPE, etc.) resources"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jonathan Senecal", email = "contact@jonathansenecal.com"},
]
keywords = ["netbox", "netbox-plugin", "rir", "arin", "ripe", "ipam", "network-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.12"
dependencies = [
    "pyregrws>=0.2.7",
    "tenacity>=8.0",
    "geopy>=2.4",
    "pycountry>=24.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "bump-my-version",
]
docs = [
    "zensical",
]

[project.urls]
Homepage = "https://github.com/jsenecal/netbox-rir-manager"
Source = "https://github.com/jsenecal/netbox-rir-manager"
Tracker = "https://github.com/jsenecal/netbox-rir-manager/issues"
Documentation = "https://jsenecal.github.io/netbox-rir-manager/"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "C90", "DJ", "PIE", "SIM"]
ignore = ["E203", "E266", "E501", "N806", "S101", "DJ01"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"**/migrations/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=netbox_rir_manager --cov-report=term-missing --cov-report=xml --reuse-db"

[tool.bumpversion]
current_version = "0.3.2"
commit = true
tag = true
tag_name = "v{new_version}"
allow_dirty = false
message = "chore: bump version {current_version} -> {new_version}"
tag_message = "Release v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "netbox_rir_manager/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
